# rpc-cluster

./: CMakeLists.txt  README.md  cluster.proto
client_java/src/: Main.java
java-client/: pom.xml
java-client/src/main/java/: grpcClient.java
java-client/src/main/java/function/: IParamTableWrapper.java  ParamTableWrapper.java
java-client/src/main/java/grpc/: grpcServiceHandler.java
java-client/src/main/java/gui/: InputUtils.java  OptionsWindow.java  PlotOptionsWindow.java
javaclient/: pom.xml
javaclient/src/main/java/: gRPCClient.java  grpcClient.java
javaclient/src/main/java/gui/: OptionsWindow.java  PlotOptionsWindow.java  PlotWindow.java
javaclient/src/main/protobuf/: cluster.proto
math/: CMakeLists.txt
math/borisova/: CMakeLists.txt  main.cpp
math/kravets/: CMakeLists.txt  main.cpp
math/tyupina/: main.cpp
server_cpp/: CMakeLists.txt  DiffEqSolver.cpp  DiffEqSolver.h  IDllLoader.h  IFunctionLoader.h  IOutputStream.h  MathTask.cpp  MathTask.h  OuputStreamAdapter.h
server_cpp/src/: ControlServiceImpl.cpp  ControlServiceImpl.h  FromChars.h  IOutputStream.h  ITaskManager.h  Logger.h  MathTask.cpp  MathTask.h  OuputStreamAdapter.h  Point.h  PointConverter.h  RpcPointsStream.cpp  RpcPointsStream.h  RpcServer.cpp  RpcServer.h  SlurmTask.cpp  SlurmTask.h  SlurmTaskManager.cpp  SlurmTaskManager.h  StartTaskCall.cpp  StartTaskCall.h  StubTaskManager.cpp  StubTaskManager.h  SuspendResume.h  cluster.cpp
server_cpp/src/native/posix/: SuspendResume.cpp
server_cpp/src/native/windows/: SuspendResume.cpp
